--- a/webapp/main.style.css
+++ b/webapp/main.style.css
@@ -105,10 +105,13 @@ footer {
 /* Accordion Styles */
   
 .accordion {
-    width: 100%;
-    margin: 90px auto;
-    padding: 45px;
-    border-radius: 5px;
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 1rem;
+    border-radius: 12px;
+    padding-block-start: 0.25em;
+    padding-block-end: 0.25em;
 }
   
 .container {
@@ -121,7 +124,7 @@ footer {
 }
   
 .label {
-    padding: 10px 0;
+    padding: 10px 1em;
     font-size: 24px;
     font-weight: bold;
     cursor: pointer;
@@ -130,31 +133,19 @@ footer {
   
 .label::before {
     content: '+';
-    position: absolute;
-    top: 50%;
-    right: -10px;
+    float: right;
     font-size: 24px;
-    transform: translateY(-50%);
 }
   
 .content {
     font-size: 20px;
     text-align: justify;
-    width: 100%;
+    width: 95%;
     overflow: hidden;
     transition: height 0.5s;
-    height: 0;
-}
-  
-.active .content {
     height: auto;
-    padding: 15px;
-    margin-top: 10px;
-}
-  
-hr {
-    margin-top: 15px;
-    margin-bottom: 15px;
+    margin: 1rem 2.5%;
+    display: none;
 }
 
 /* Code Block Styles */
